--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,6 +1,6 @@
-name: EhViewer
+name: Pull Request Check
 
-on: push
+on: [pull_request]
 
 jobs:
   linux:
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          submodules: 'recursive'
 
       - name: Setup Java 11
         uses: actions/setup-java@v3
@@ -16,36 +18,35 @@ jobs:
           distribution: temurin
           java-version: 11
 
-      - name: Setup Android SDK Tools
-        uses: android-actions/setup-android@v2
-
       - name: Install NDK
         run: |
           echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;24.0.8215888" --sdk_root=${ANDROID_SDK_ROOT} &> /dev/null
+
       - name: Gradle Build
         uses: gradle/gradle-build-action@v2
-      - run: |
-          git submodule update --init --recursive
-          gradle assembleRelease
-      - name: Update ARM64
+        with:
+          gradle-home-cache-cleanup: true
+          arguments: assembleRelease
+
+      - name: Upload ARM64
         uses: actions/upload-artifact@v3
         with:
-          name: arm64-${{ github.sha }}
+          name: arm64-v8a-${{ github.sha }}
           path: app/build/outputs/apk/release/app-arm64-v8a-release.apk
 
-      - name: Update x86_64
+      - name: Upload x86_64
         uses: actions/upload-artifact@v3
         with:
           name: x86_64-${{ github.sha }}
           path: app/build/outputs/apk/release/app-x86_64-release.apk
 
-      - name: Update ARM32
+      - name: Upload ARM32
         uses: actions/upload-artifact@v3
         with:
           name: armeabi-v7a-${{ github.sha }}
           path: app/build/outputs/apk/release/app-armeabi-v7a-release.apk
 
-      - name: Update x86
+      - name: Upload x86
         uses: actions/upload-artifact@v3
         with:
           name: x86-${{ github.sha }}
