--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "native/src/main/jni/a7zip/p7zip/p7zip"]
 	path = native/src/main/jni/a7zip/p7zip/p7zip
-	url = https://github.com/seven332/p7zip.git
+	url = https://github.com/EhViewer-NekoInverter/p7zip
 [submodule "native/src/main/jni/image/libjpeg-turbo/libjpeg-turbo"]
 	path = native/src/main/jni/image/libjpeg-turbo/libjpeg-turbo
-	url = https://gitlab.com/NekoInverter/libjpeg-turbo.git
+	url = https://github.com/EhViewer-NekoInverter/libjpeg-turbo
 [submodule "native/src/main/jni/image/giflib/giflib"]
 	path = native/src/main/jni/image/giflib/giflib
-	url = https://gitlab.com/NekoInverter/giflib.git
+	url = https://github.com/EhViewer-NekoInverter/giflib
 [submodule "native/src/main/jni/image/libpng/libpng"]
 	path = native/src/main/jni/image/libpng/libpng
-	url = https://gitlab.com/NekoInverter/libpng.git
+	url = https://github.com/EhViewer-NekoInverter/libpng
