--- a/daogenerator/build.gradle
+++ b/daogenerator/build.gradle
@@ -24,6 +24,13 @@ task executeDaoGenerator(type:JavaExec) {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'org.greenrobot:greendao-generator:3.3.0'
-    implementation 'org.jboss.forge.roaster:roaster-api:2.20.1.Final'
-    implementation 'org.jboss.forge.roaster:roaster-jdt:2.20.1.Final'
+
+    def roaster_version = "2.28.0.Final"
+    implementation "org.jboss.forge.roaster:roaster-api:$roaster_version"
+    implementation "org.jboss.forge.roaster:roaster-jdt:$roaster_version"
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
