--- a/native/build.gradle
+++ b/native/build.gradle
@@ -3,13 +3,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 32
-    buildToolsVersion "32.0.0"
-    ndkVersion "24.0.8215888"
+    compileSdkVersion 33
+    buildToolsVersion "33.0.0"
+    ndkVersion "25.0.8775105"
 
     defaultConfig {
-        minSdkVersion 23
-        targetSdkVersion 32
+        minSdkVersion 26
+        targetSdkVersion 33
         consumerProguardFiles 'proguard-rules.pro'
 
         ndk {
@@ -30,5 +30,5 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.annotation:annotation:1.3.0'
+    compileOnly 'androidx.annotation:annotation:1.5.0'
 }
