--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -33,6 +33,7 @@ jobs:
 
       - name: Rename Apks
         run: |
+          cp app/build/outputs/apk/release/app-universal-release.apk app/build/outputs/apk/release/EhViewer-NekoInverter-universal.apk
           cp app/build/outputs/apk/release/app-arm64-v8a-release.apk app/build/outputs/apk/release/EhViewer-NekoInverter-arm64-v8a.apk
           cp app/build/outputs/apk/release/app-x86_64-release.apk app/build/outputs/apk/release/EhViewer-NekoInverter-x86_64.apk
           cp app/build/outputs/apk/release/app-x86-release.apk app/build/outputs/apk/release/EhViewer-NekoInverter-x86.apk
@@ -43,6 +44,7 @@ jobs:
         with:
           body: Bump Version
           files: |
+            app/build/outputs/apk/release/EhViewer-NekoInverter-universal.apk
             app/build/outputs/apk/release/EhViewer-NekoInverter-arm64-v8a.apk
             app/build/outputs/apk/release/EhViewer-NekoInverter-x86_64.apk
             app/build/outputs/apk/release/EhViewer-NekoInverter-x86.apk
