--- a/daogenerator/build.gradle
+++ b/daogenerator/build.gradle
@@ -17,7 +17,7 @@
 apply plugin: 'java'
 
 task executeDaoGenerator(type:JavaExec) {
-    main = 'com.hippo.ehviewer.daogenerator.Main'
+    mainClass = 'com.hippo.ehviewer.daogenerator.Main'
     classpath = sourceSets.main.runtimeClasspath
 }
 
