--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,19 +93,19 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-    implementation 'androidx.activity:activity:1.4.0'
+    implementation 'androidx.activity:activity:1.6.1'
     implementation 'androidx.biometric:biometric:1.1.0'
     implementation 'androidx.browser:browser:1.4.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.core:core:1.7.0'
+    implementation 'androidx.core:core:1.9.0'
     implementation 'androidx.dynamicanimation:dynamicanimation:1.1.0-alpha03'
-    implementation 'androidx.fragment:fragment:1.4.1'
+    implementation 'androidx.fragment:fragment:1.5.4'
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
-    implementation 'androidx.webkit:webkit:1.4.0'
+    implementation 'androidx.webkit:webkit:1.5.0'
     implementation 'com.drakeet.drawer:drawer:1.0.3'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.13.3'
     implementation 'com.github.seven332:beerbelly:0.1.4'
     implementation 'com.github.seven332:glgallery:0.1.2'
@@ -117,21 +117,22 @@ dependencies {
     implementation 'com.github.seven332:yorozuya-thread:0.1.1'
     implementation 'com.github.seven332:yorozuya-collect:0.1.4'
     implementation 'com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:1.0.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
-    implementation 'com.squareup.okhttp3:okhttp-dnsoverhttps:4.9.3'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.10'
+    implementation 'com.squareup.okhttp3:okhttp-dnsoverhttps:5.0.0-alpha.10'
     implementation 'com.takisoft.preferencex:preferencex:1.1.0'
     implementation 'com.gitlab.NekoInverter:yorozuya:723dc867a9'
-    implementation 'dev.rikka.rikkax.appcompat:appcompat:1.4.1'
-    implementation 'dev.rikka.rikkax.core:core:1.4.0'
-    implementation 'dev.rikka.rikkax.insets:insets:1.2.0'
+    implementation 'dev.rikka.rikkax.appcompat:appcompat:1.5.0.1'
+    implementation 'dev.rikka.rikkax.core:core:1.4.1'
+    implementation 'dev.rikka.rikkax.insets:insets:1.3.0'
     implementation 'dev.rikka.rikkax.layoutinflater:layoutinflater:1.2.0'
+    //noinspection GradleDependency
     implementation 'dev.rikka.rikkax.material:material:1.6.6'
     implementation 'dev.rikka.rikkax.recyclerview:recyclerview-ktx:1.3.1'
     implementation 'dev.rikka.rikkax.widget:borderview:1.1.0'
     implementation 'dev.rikka.rikkax.preference:simplemenu-preference:1.0.3'
     implementation 'org.ccil.cowan.tagsoup:tagsoup:1.2.1'
     implementation 'org.greenrobot:greendao:3.3.0'
-    implementation 'org.jsoup:jsoup:1.15.1'
+    implementation 'org.jsoup:jsoup:1.15.3'
     implementation projects.native
 }
 
