--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
+    id 'com.google.devtools.ksp'
 }
 
 android {
@@ -82,17 +82,7 @@ android {
         }
     }
 
-    sourceSets {
-        main {
-            java.srcDirs += 'src/main/java-gen'
-        }
-    }
-
     namespace 'com.hippo.ehviewer'
-}
-
-tasks.withType(JavaCompile) {
-    task -> task.dependsOn ":daogenerator:executeDaoGenerator"
 }
 
 dependencies {
@@ -103,7 +93,9 @@ dependencies {
     implementation 'androidx.core:core:1.9.0'
     implementation 'androidx.fragment:fragment:1.5.4'
     implementation 'androidx.preference:preference:1.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0-rc01'
+    implementation "androidx.room:room-runtime:2.5.0-beta02"
+    annotationProcessor "androidx.room:room-compiler:2.5.0-beta02"
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
     implementation 'com.drakeet.drawer:drawer:1.0.3'
     implementation 'com.google.android.material:material:1.7.0'
@@ -117,7 +109,6 @@ dependencies {
     implementation 'dev.rikka.rikkax.material:material:1.6.6'
     implementation 'dev.rikka.rikkax.recyclerview:recyclerview-ktx:1.3.1'
     implementation 'dev.rikka.rikkax.preference:simplemenu-preference:1.0.3'
-    implementation 'org.greenrobot:greendao:3.3.0'
     implementation 'org.jsoup:jsoup:1.15.3'
 }
 
