--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
+    id 'com.google.devtools.ksp' version '1.7.21-1.0.8' apply false
 }
 
 task clean(type: Delete) {
