--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,10 +92,13 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.core:core:1.9.0'
     implementation 'androidx.fragment:fragment:1.5.4'
+    implementation "androidx.paging:paging-runtime:3.2.0-alpha03"
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0-rc01'
-    implementation "androidx.room:room-runtime:2.5.0-beta02"
-    annotationProcessor "androidx.room:room-compiler:2.5.0-beta02"
+    def room_version = "2.5.0-beta02"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-paging:$room_version"
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
     implementation 'com.drakeet.drawer:drawer:1.0.3'
     implementation 'com.google.android.material:material:1.7.0'
