--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ android {
         applicationId "org.moedog.ehviewer"
         minSdkVersion 28
         targetSdkVersion 33
-        versionCode 172801
-        versionName "1.7.28.0-b2"
+        versionCode 172802
+        versionName "1.7.28"
         resConfigs 'zh', 'zh-rCN', 'zh-rHK', 'zh-rTW', 'es', 'ja', 'ko', 'fr', 'de', 'th'
     }
 
