--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
  - name: 所有其他问题 / All other questions
-   url: https://github.com/EhViewer-NekoInverter/EhViewer/discussions
-   about: 转到 Discussions / Turn to discussions
+   url: https://www.google.com/
+   about: 咨询谷歌 / Ask Google for help
