--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
         targetSdkVersion 33
         versionCode 172806
         versionName "1.7.28.4"
-        resConfigs 'zh', 'zh-rCN', 'zh-rHK', 'zh-rTW', 'es', 'ja', 'ko', 'fr', 'de', 'th'
+        resConfigs 'zh', 'zh-rCN', 'zh-rHK', 'zh-rTW', 'ja'
     }
 
     externalNativeBuild {
@@ -91,11 +91,11 @@ dependencies {
     implementation 'androidx.browser:browser:1.4.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.core:core:1.9.0'
-    implementation 'androidx.fragment:fragment:1.5.4'
+    implementation 'androidx.fragment:fragment:1.5.5'
     implementation "androidx.paging:paging-runtime:3.2.0-alpha03"
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0-rc01'
-    def room_version = "2.5.0-beta02"
+    def room_version = "2.5.0"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-paging:$room_version"
@@ -104,8 +104,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.13.3'
     implementation 'com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:1.0.0'
-    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.10'
-    implementation 'com.squareup.okhttp3:okhttp-dnsoverhttps:5.0.0-alpha.10'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.11'
     implementation 'dev.rikka.rikkax.appcompat:appcompat:1.5.0.1'
     implementation 'dev.rikka.rikkax.core:core:1.4.1'
     //noinspection GradleDependency
