--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'com.android.application' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
-    id 'com.google.devtools.ksp' version '1.7.21-1.0.8' apply false
+    id 'com.android.application' version '8.0.0-beta03' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'com.google.devtools.ksp' version '1.8.10-1.0.9' apply false
 }
 
 task clean(type: Delete) {
