--- a/gradle.properties
+++ b/gradle.properties
@@ -11,20 +11,12 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
-# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8 -XX:+UseParallelGC
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
+org.gradle.caching=true
 android.useAndroidX=true
-android.enableJetifier=true
 android.enableAppCompileTimeRClass=true
-android.nonTransitiveRClass=true
-
-# signing environment variable
-signStoreFile=keystore/androidkey.jks
-signStorePassword=000000
-signkeyAlias=key0
-signkeyPassword=000000
-
