--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         android:name="com.hippo.ehviewer.EhApplication"
         android:allowBackup="true"
         android:appCategory="image"
+        android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_scheme"
         android:hasFragileUserData="true"
         android:icon="@mipmap/ic_launcher"
