--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'com.google.devtools.ksp'
+    id "com.android.application"
+    id "kotlin-android"
+    id "kotlin-parcelize"
+    id "com.google.devtools.ksp"
 }
 
 android {
@@ -13,7 +14,7 @@ android {
         abi {
             enable = true
             reset()
-            include 'arm64-v8a', 'x86_64', 'armeabi-v7a', 'x86'
+            include "arm64-v8a", "x86_64", "armeabi-v7a", "x86"
             universalApk = true
         }
     }
@@ -35,12 +36,12 @@ android {
         targetSdkVersion 33
         versionCode 172809
         versionName "1.7.28.7"
-        resConfigs 'zh', 'zh-rCN', 'zh-rHK', 'zh-rTW', 'ja'
+        resConfigs "zh", "zh-rCN", "zh-rHK", "zh-rTW", "ja"
     }
 
     externalNativeBuild {
         cmake {
-            path 'src/main/cpp/CMakeLists.txt'
+            path "src/main/cpp/CMakeLists.txt"
         }
     }
 
@@ -50,7 +51,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = '19'
+        jvmTarget = "19"
         freeCompilerArgs += [
             // https://kotlinlang.org/docs/compiler-reference.html#progressive
             "-progressive"
@@ -60,7 +61,7 @@ android {
     lint {
         abortOnError true
         checkReleaseBuilds false
-        disable 'MissingTranslation'
+        disable "MissingTranslation"
     }
 
     packagingOptions {
@@ -78,7 +79,7 @@ android {
         release {
             minifyEnabled true
             shrinkResources true
-            proguardFiles 'proguard-rules.pro'
+            proguardFiles "proguard-rules.pro"
             signingConfig signingConfigs.sign
         }
         debug {
@@ -91,34 +92,42 @@ android {
         buildConfig true
     }
 
-    namespace 'com.hippo.ehviewer'
+    namespace "com.hippo.ehviewer"
 }
 
 dependencies {
-    implementation 'androidx.activity:activity:1.6.1'
-    implementation 'androidx.biometric:biometric:1.1.0'
-    implementation 'androidx.browser:browser:1.4.0'
-    implementation 'androidx.core:core:1.10.0-alpha01'
-    implementation 'androidx.fragment:fragment:1.5.5'
-    implementation "androidx.paging:paging-runtime:3.2.0-alpha03"
-    implementation 'androidx.preference:preference:1.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0-rc01'
+    implementation "androidx.activity:activity-ktx:1.6.1"
+    implementation "androidx.biometric:biometric-ktx:1.2.0-alpha05"
+    implementation "androidx.browser:browser:1.5.0"
+    implementation "androidx.collection:collection-ktx:1.3.0-alpha02"
+    implementation "androidx.core:core-ktx:1.10.0-alpha01"
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
+    implementation "androidx.fragment:fragment-ktx:1.6.0-alpha04"
+    implementation "androidx.lifecycle:lifecycle-process:2.5.1"
+    implementation "androidx.paging:paging-runtime-ktx:3.2.0-alpha04"
+    implementation "androidx.preference:preference-ktx:1.2.0"
+    implementation "androidx.recyclerview:recyclerview:1.3.0-rc01"
     def room_version = "2.5.0"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-paging:$room_version"
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
-    implementation 'com.drakeet.drawer:drawer:1.0.3'
-    implementation 'com.google.android.material:material:1.7.0'
-    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.11'
-    implementation 'dev.rikka.rikkax.appcompat:appcompat:1.5.0.1'
-    implementation 'dev.rikka.rikkax.core:core:1.4.1'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01"
+    implementation "com.drakeet.drawer:drawer:1.0.3"
+    implementation "com.google.android.material:material:1.8.0"
+    implementation "com.squareup.okhttp3:okhttp-bom:5.0.0-alpha.11"
+    implementation "com.squareup.okhttp3:okhttp-coroutines"
+    implementation "dev.rikka.rikkax.appcompat:appcompat:1.5.0.1"
+    implementation "dev.rikka.rikkax.core:core-ktx:1.4.1"
     //noinspection GradleDependency
-    implementation 'dev.rikka.rikkax.material:material:1.6.6'
-    implementation 'dev.rikka.rikkax.preference:simplemenu-preference:1.0.3'
-    implementation 'org.jsoup:jsoup:1.15.3'
+    implementation "dev.rikka.rikkax.material:material:1.6.6"
+    implementation "dev.rikka.rikkax.preference:simplemenu-preference:1.0.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    implementation "org.jsoup:jsoup:1.15.3"
 }
 
 configurations.all {
-    exclude group: 'androidx.appcompat', module: 'appcompat'
+    exclude group: "androidx.appcompat", module: "appcompat"
+    exclude group: "org.jetbrains.kotlin", module: "kotlin-android-extensions-runtime"
+    exclude group: "org.jetbrains.kotlin", module: "kotlin-stdlib-jdk7"
+    exclude group: "org.jetbrains.kotlin", module: "kotlin-stdlib-jdk8"
 }
