--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ org.gradle.parallel=true
 org.gradle.caching=true
 android.useAndroidX=true
 android.enableAppCompileTimeRClass=true
+android.experimental.enableNewResourceShrinker.preciseShrinking=true
