--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -151,6 +151,15 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
         <service
+            android:name="androidx.appcompat.app.AppLocalesMetadataHolderService"
+            android:enabled="false"
+            android:exported="false">
+            <meta-data
+                android:name="autoStoreLocales"
+                android:value="true" />
+        </service>
+
+        <service
             android:name="com.hippo.ehviewer.download.DownloadService"
             android:foregroundServiceType="dataSync"
             android:label="@string/download_service_label" />
