--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -9,16 +9,16 @@ body:
         感谢您愿意为 Ehviewer-NekoInverter 做出贡献！
         提交问题报告前，还请首先完成文末的自查步骤
 
-        Thanks for your contribution on Ehviewer-NekoInverter Project!
-        Please finish verify steps which list in the end first before create bug report
+        Thanks for your contribution to the Ehviewer-NekoInverter Project!
+        Please complete the self-review steps at the end of the article before submitting the bug report
 
   - type: textarea
     id: reproduce
     attributes:
-      label: 复现步骤 / Step to reproduce
+      label: 复现步骤 / Steps to reproduce
       description: |
         在此处写下复现的方式，请详细描述每一个步骤，包括画廊链接、相关设置等
-        Describe how to reproduce here, please describe each step in detail, include gallery link or settings
+        Describe how to reproduce here, please describe each step in detail, include gallery links or settings
       placeholder: |
         1.
         2.
@@ -32,7 +32,7 @@ body:
       label: 预期行为 / Expected behaviour
       description: |
         在此处说明正常情况下应用的预期行为
-        Describe what should happened here
+        Describe what should be happened here
       placeholder: |
         它应该 ...
         It should be ...
@@ -42,10 +42,10 @@ body:
   - type: textarea
     id: actual
     attributes:
-      label: 实际行为 / Actual Behaviour
+      label: 实际行为 / Actual behaviour
       description: |
         在此处描绘应用的实际行为，最好附上截图或录屏
-        Describe what actually happened here, screenshots or screen recordings is better
+        Describe what actually happened here, screenshots or screen recordings are better
       placeholder: |
         实际上它 ...
         Actually it ...
@@ -56,10 +56,10 @@ body:
   - type: textarea
     id: more
     attributes:
-      label: 备注 / Addition details
+      label: 备注 / Additional details
       description: |
         在此处写下其他您想说的内容
-        Describe addition details here
+        Describe additional details here
       placeholder: |
         其他有用的信息与附件
         Additional details and attachments
@@ -80,10 +80,10 @@ body:
   - type: input
     id: ci
     attributes:
-      label: EhViewer CI 版本 / EhViewer CI Version
+      label: EhViewer CI 版本 / EhViewer CI version
       description: |
-        请确保您已经使用 [最新 CI 版本](https://github.com/EhViewer-NekoInverter/EhViewer/actions/workflows/ci.yml?query=branch%3Aeh-1.7.28.x) 测试，请填入您使用的 CI 版本网址
-        Please make sure you have tested with the [latest CI version](https://github.com/EhViewer-NekoInverter/EhViewer/actions/workflows/ci.yml?query=branch%3Aeh-1.7.28.x), simply drop GitHub Action CI download page url here
+        请确保您已经使用 [最新 CI 版本](https://github.com/EhViewer-NekoInverter/EhViewer/actions/workflows/ci.yml) 测试，请填入您使用的 CI 版本网址
+        Please make sure you have tested with the [latest CI version](https://github.com/EhViewer-NekoInverter/EhViewer/actions/workflows/ci.yml), simply drop GitHub Action CI download page url here
       placeholder: https://github.com/EhViewer-NekoInverter/EhViewer/actions/runs/XXXXXXXXXX
     validations:
       required: true
@@ -109,8 +109,8 @@ body:
   - type: input
     id: SoC
     attributes:
-      label: SoC 型号 / Soc model
-      description: 在此填入 SoC 型号 / Put Soc model here
+      label: SoC 型号 / SoC model
+      description: 在此填入 SoC 型号 / Put SoC model here
       placeholder: 骁龙 8+ Gen 1, Snapdragon 8+ Gen 1
     validations:
       required: true
@@ -120,7 +120,7 @@ body:
     attributes:
       label: 应用日志 / App logs
       description: |
-        您可以通过设置-高级-导出日志 来获得日志文件，过长的日志请以文件形式上传
+        您可以通过设置-高级-导出日志 来获得日志文件，请确保日志完整，过长的日志请以文件形式上传
         You can get logs file in Settings - Advanced - Dump logcat
       placeholder: 06-15 17:44:53.704 23382 23382 E ...
     validations:
@@ -129,7 +129,7 @@ body:
   - type: checkboxes
     id: check
     attributes:
-      label: 自查步骤 / Verify steps
+      label: 自查步骤 / Self-review steps
       description: |
         请确保您已经遵守以下所有必选项，否则 issue 会被立即关闭
         Please ensure you have obtained all needed options, otherwise the issue will be closed immediately
@@ -140,11 +140,11 @@ body:
       - label: 您已仔细查看并知情 [Q&A](https://github.com/EhViewer-NekoInverter/EhViewer/issues/18) 中的内容 / You have checked [Q&A](https://github.com/EhViewer-NekoInverter/EhViewer/issues/18) carefully
         required: true
 
-      - label: 您已搜索过 [Issue Tracker](https://github.com/EhViewer-NekoInverter/EhViewer/issues)，没有找到类似内容 / I have searched on [Issue Tracker](https://github.com/EhViewer-NekoInverter/EhViewer/issues), No duplicate or related open issue has been found
+      - label: 您已搜索过 [Issue Tracker](https://github.com/EhViewer-NekoInverter/EhViewer/issues)，没有找到类似的问题 / I have searched on [Issue Tracker](https://github.com/EhViewer-NekoInverter/EhViewer/issues), No duplicate or related open issue has been found
         required: true
 
       - label: 您确保这个 Issue 只提及一个问题。如果您有多个问题报告，烦请发起多个 Issue / Ensure there is only one bug report in this issue. Please make mutiply issue for mutiply bugs
         required: true
 
-      - label: 您确保已使用 [最新 CI 版本](https://github.com/EhViewer-NekoInverter/EhViewer/actions/workflows/ci.yml?query=branch%3Aeh-1.7.28.x) 测试，并且该问题在最新 CI 版本中并未解决 / This bug have not solved in [latest CI version](https://github.com/EhViewer-NekoInverter/EhViewer/actions/workflows/ci.yml?query=branch%3Aeh-1.7.28.x)
+      - label: 您确保已使用 [最新 CI 版本](https://github.com/EhViewer-NekoInverter/EhViewer/actions/workflows/ci.yml) 测试，并且该问题在最新 CI 版本中并未解决 / This bug have not solved in [latest CI version](https://github.com/EhViewer-NekoInverter/EhViewer/actions/workflows/ci.yml)
         required: true
