Use spotless for ktlint integration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,14 +27,16 @@ jobs:
         run: |
           echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;25.2.9519653" --sdk_root=${ANDROID_SDK_ROOT} &> /dev/null
 
-      - name: Ktlint Check
-        run: ./gradlew ktlintCheck
-
-      - name: Gradle Build
+      - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
         with:
           gradle-home-cache-cleanup: true
-          arguments: assembleRelease
+
+      - name: Spotless Check
+        run: ./gradlew spotlessCheck
+
+      - name: Gradle Build
+        run: ./gradlew assembleRelease
 
       - name: Upload ARM64
         uses: actions/upload-artifact@v3
