--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-android-tools-r8 = "8.3.6-dev"
+android-tools-r8 = "8.3.15-dev"
 androidx-activity = "1.8.0"
 androidx-appcompat = "1.6.1"
 androidx-biometric = "1.2.0-alpha05"
@@ -11,10 +11,10 @@ androidx-fragment = "1.6.1"
 androidx-lifecycle = "2.6.2"
 androidx-paging = "3.2.1"
 androidx-preference = "1.2.1"
-androidx-recyclerview = "1.3.1"
-androidx-room = "2.6.0-rc01"
+androidx-recyclerview = "1.3.2"
+androidx-room = "2.6.0"
 androidx-swiperefreshlayout = "1.2.0-alpha01"
-coil = "2.4.0"
+coil = "2.5.0"
 google-android-material = "1.10.0"
 kotlin = "1.9.10"
 kotlinx-coroutines = "1.7.3"
