--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,27 +1,27 @@
 [versions]
-agp = "8.1.4"
-android-tools-r8 = "8.3.16-dev"
-androidx-activity = "1.8.1"
+agp = "8.2.2"
+android-tools-r8 = "8.3.31"
+androidx-activity = "1.8.2"
 androidx-appcompat = "1.6.1"
 androidx-biometric = "1.2.0-alpha05"
 androidx-browser = "1.7.0"
-androidx-collection = "1.3.0"
+androidx-collection = "1.4.0"
 androidx-coordinatorlayout = "1.2.0"
 androidx-core = "1.12.0"
 androidx-fragment = "1.6.2"
-androidx-lifecycle = "2.6.2"
+androidx-lifecycle = "2.7.0"
 androidx-paging = "3.2.1"
 androidx-preference = "1.2.1"
 androidx-recyclerview = "1.3.2"
 androidx-room = "2.6.1"
 androidx-swiperefreshlayout = "1.2.0-alpha01"
 coil = "2.5.0"
-google-android-material = "1.10.0"
-kotlin = "1.9.21"
+google-android-material = "1.11.0"
+kotlin = "1.9.22"
 kotlinx-coroutines = "1.7.3"
-ksp = "1.9.21-1.0.15"
+ksp = "1.9.22-1.0.17"
 okhttp3 = "5.0.0-alpha.11"
-okio = "3.6.0"
+okio = "3.8.0"
 rikkax-material = { strictly = "1.6.6" }
 
 [libraries]
@@ -44,7 +44,7 @@ androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "an
 androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "androidx-swiperefreshlayout" }
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 drawer = "com.drakeet.drawer:drawer:1.0.3"
-jsoup = "org.jsoup:jsoup:1.16.2"
+jsoup = "org.jsoup:jsoup:1.17.2"
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
 material = { module = "com.google.android.material:material", version.ref = "google-android-material" }
 
@@ -68,4 +68,4 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-spotless = { id = "com.diffplug.spotless", version = "6.23.2" }
+spotless = { id = "com.diffplug.spotless", version = "6.25.0" }
