--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,31 @@
 [versions]
-agp = "8.2.2"
+agp = "8.3.2"
 android-tools-r8 = "8.3.37"
-androidx-activity = "1.8.2"
-androidx-appcompat = "1.6.1"
+androidx-activity = "1.9.0"
+androidx-appcompat = "1.7.0-alpha03"
 androidx-biometric = "1.2.0-alpha05"
 androidx-browser = "1.8.0"
 androidx-collection = "1.4.0"
-androidx-coordinatorlayout = "1.2.0"
-androidx-core = "1.12.0"
-androidx-fragment = "1.6.2"
+androidx-coordinatorlayout = "1.3.0-alpha02"
+androidx-core = "1.13.0"
+androidx-fragment = "1.8.0-alpha02"
 androidx-lifecycle = "2.7.0"
 androidx-paging = "3.2.1"
 androidx-preference = "1.2.1"
 androidx-recyclerview = "1.3.2"
 androidx-room = "2.6.1"
 androidx-swiperefreshlayout = "1.2.0-alpha01"
-coil = "2.5.0"
+coil = "2.6.0"
+drawer = "1.0.3"
 google-android-material = "1.11.0"
+jsoup = "1.17.2"
 kotlin = "1.9.23"
 kotlinx-coroutines = "1.8.0"
-ksp = "1.9.23-1.0.19"
-okhttp3 = "5.0.0-alpha.11"
+ksp = "1.9.23-1.0.20"
+okhttp3 = "5.0.0-alpha.14"
 okio = "3.9.0"
 rikkax-material = { strictly = "1.6.6" }
+spotless = "6.25.0"
 
 [libraries]
 androidx-activity = { module = "androidx.activity:activity-ktx", version.ref = "androidx-activity" }
@@ -37,14 +40,13 @@ androidx-lifecycle-process = { module = "androidx.lifecycle:lifecycle-process", 
 androidx-paging-runtime = { module = "androidx.paging:paging-runtime-ktx", version.ref = "androidx-paging" }
 androidx-preference = { module = "androidx.preference:preference-ktx", version.ref = "androidx-preference" }
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "androidx-recyclerview" }
-
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "androidx-room" }
 androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "androidx-room" }
-
 androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "androidx-swiperefreshlayout" }
+
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
-drawer = "com.drakeet.drawer:drawer:1.0.3"
-jsoup = "org.jsoup:jsoup:1.17.2"
+drawer = { module = "com.drakeet.drawer:drawer", version.ref = "drawer" }
+jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
 material = { module = "com.google.android.material:material", version.ref = "google-android-material" }
 
@@ -68,4 +70,4 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-spotless = { id = "com.diffplug.spotless", version = "6.25.0" }
+spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
