--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
-agp = "8.3.2"
+agp = "8.4.0"
 android-tools-r8 = "8.3.37"
 androidx-activity = "1.9.0"
-androidx-appcompat = "1.7.0-alpha03"
+androidx-appcompat = "1.7.0-beta01"
 androidx-biometric = "1.2.0-alpha05"
 androidx-browser = "1.8.0"
 androidx-collection = "1.4.0"
 androidx-coordinatorlayout = "1.3.0-alpha02"
-androidx-core = "1.13.0"
+androidx-core = "1.13.1"
 androidx-fragment = "1.8.0-alpha02"
 androidx-lifecycle = "2.7.0"
 androidx-paging = "3.2.1"
@@ -17,10 +17,10 @@ androidx-room = "2.6.1"
 androidx-swiperefreshlayout = "1.2.0-alpha01"
 coil = "2.6.0"
 drawer = "1.0.3"
-google-android-material = "1.11.0"
+google-android-material = "1.12.0"
 jsoup = "1.17.2"
 kotlin = "1.9.23"
-kotlinx-coroutines = "1.8.0"
+kotlinx-coroutines = "1.8.1"
 ksp = "1.9.23-1.0.20"
 okhttp3 = "5.0.0-alpha.14"
 okio = "3.9.0"
