--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,16 @@
 [versions]
-agp = "8.4.1"
-android-tools-r8 = "8.3.37"
-androidx-activity = "1.9.0"
+agp = "8.4.2"
+android-tools-r8 = "8.5.35"
+androidx-activity = "1.9.1"
 androidx-appcompat = "1.7.0"
 androidx-biometric = "1.2.0-alpha05"
 androidx-browser = "1.8.0"
-androidx-collection = "1.4.0"
+androidx-collection = "1.4.3"
 androidx-coordinatorlayout = "1.3.0-alpha02"
 androidx-core = "1.13.1"
-androidx-fragment = "1.8.0-rc01"
-androidx-lifecycle = "2.8.1"
-androidx-paging = "3.3.0"
+androidx-fragment = "1.8.2"
+androidx-lifecycle = "2.8.4"
+androidx-paging = "3.3.2"
 androidx-preference = "1.2.1"
 androidx-recyclerview = "1.3.2"
 androidx-room = "2.6.1"
