--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Java 17
+      - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 17
+          java-version: 21
 
       - name: Gradle Build
         uses: gradle/actions/setup-gradle@v3
