--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ org.gradle.caching=true
 android.useAndroidX=true
 android.enableAppCompileTimeRClass=true
 android.experimental.enableNewResourceShrinker.preciseShrinking=true
+android.lint.useK2Uast=true
