--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -20,27 +20,27 @@ jobs:
           java-version: 21
 
       - name: Gradle Build
-        uses: gradle/actions/setup-gradle@v3
+        uses: gradle/actions/setup-gradle@v4
         with:
           arguments: assembleRelease
 
       - name: Rename Apks
         run: |
-          mv app/build/outputs/apk/release/app-universal-release.apk EhViewer-NekoInverter-${{ github.ref_name }}-universal.apk
-          mv app/build/outputs/apk/release/app-arm64-v8a-release.apk EhViewer-NekoInverter-${{ github.ref_name }}-arm64-v8a.apk
-          mv app/build/outputs/apk/release/app-armeabi-v7a-release.apk EhViewer-NekoInverter-${{ github.ref_name }}-armeabi-v7a.apk
-          mv app/build/outputs/apk/release/app-x86_64-release.apk EhViewer-NekoInverter-${{ github.ref_name }}-x86_64.apk
-          mv app/build/outputs/apk/release/app-x86-release.apk EhViewer-NekoInverter-${{ github.ref_name }}-x86.apk
-          mv app/build/outputs/mapping/release/mapping.txt EhViewer-NekoInverter-${{ github.ref_name }}-mapping.txt
+          mv app/build/outputs/apk/release/app-universal-release.apk EhViewer-default-${{ github.ref_name }}-universal.apk
+          mv app/build/outputs/apk/release/app-arm64-v8a-release.apk EhViewer-default-${{ github.ref_name }}-arm64-v8a.apk
+          mv app/build/outputs/apk/release/app-armeabi-v7a-release.apk EhViewer-default-${{ github.ref_name }}-armeabi-v7a.apk
+          mv app/build/outputs/apk/release/app-x86_64-release.apk EhViewer-default-${{ github.ref_name }}-x86_64.apk
+          mv app/build/outputs/apk/release/app-x86-release.apk EhViewer-default-${{ github.ref_name }}-x86.apk
+          mv app/build/outputs/mapping/release/mapping.txt EhViewer-default-${{ github.ref_name }}-mapping.txt
 
       - name: Releases
         uses: softprops/action-gh-release@v2
         with:
           body: Bump Version
           files: |
-            EhViewer-NekoInverter-${{ github.ref_name }}-universal.apk
-            EhViewer-NekoInverter-${{ github.ref_name }}-arm64-v8a.apk
-            EhViewer-NekoInverter-${{ github.ref_name }}-armeabi-v7a.apk
-            EhViewer-NekoInverter-${{ github.ref_name }}-x86_64.apk
-            EhViewer-NekoInverter-${{ github.ref_name }}-x86.apk
-            EhViewer-NekoInverter-${{ github.ref_name }}-mapping.txt
+            EhViewer-default-${{ github.ref_name }}-universal.apk
+            EhViewer-default-${{ github.ref_name }}-arm64-v8a.apk
+            EhViewer-default-${{ github.ref_name }}-armeabi-v7a.apk
+            EhViewer-default-${{ github.ref_name }}-x86_64.apk
+            EhViewer-default-${{ github.ref_name }}-x86.apk
+            EhViewer-default-${{ github.ref_name }}-mapping.txt
