--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,31 @@
 [versions]
 agp = "8.7.3"
-androidx-activity = "1.9.3"
+androidx-activity = "1.10.0"
 androidx-appcompat = "1.7.0"
 androidx-biometric = "1.4.0-alpha02"
 androidx-browser = "1.8.0"
 androidx-collection = "1.4.5"
-androidx-coordinatorlayout = "1.3.0-alpha02"
+androidx-coordinatorlayout = "1.3.0-beta01"
 androidx-core = "1.15.0"
 androidx-fragment = "1.8.5"
 androidx-lifecycle = "2.8.7"
 androidx-paging = "3.3.5"
 androidx-preference = "1.2.1"
-androidx-recyclerview = "1.3.2"
+androidx-recyclerview = "1.4.0"
 androidx-room = "2.6.1"
 androidx-swiperefreshlayout = "1.2.0-alpha01"
-coil = "3.0.4"
+coil = "3.1.0"
 drawer = "1.0.3"
 google-android-material = "1.12.0"
 jsoup = "1.18.3"
 kotlin = "2.0.20"
-kotlinx-coroutines = "1.9.0"
-kotlinx-datetime = "0.6.1"
-kotlinx-serialization = "1.7.3"
+kotlinx-coroutines = "1.10.1"
+kotlinx-datetime = "0.6.2"
+kotlinx-serialization = "1.8.0"
 ksp = "2.0.20-1.0.25"
-ktor-utils = "3.0.2"
+ktor-utils = "3.0.3"
 okhttp3 = "5.0.0-alpha.14"
-okio = "3.9.1"
+okio = "3.10.2"
 rikkax-material = { strictly = "1.6.6" }
 spotless = "6.25.0"
 
