--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -19,7 +19,7 @@ jobs:
           distribution: temurin
           java-version: 21
 
-      - name: Gradle Build
+      - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
       - name: Gradle Build
