--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,17 +30,17 @@ jobs:
       - name: Gradle Build
         run: ./gradlew assembleRelease
 
+      - name: Upload Universal
+        uses: actions/upload-artifact@v4
+        with:
+          name: universal-${{ github.sha }}
+          path: app/build/outputs/apk/release/app-universal-release.apk
+
       - name: Upload ARM64
         uses: actions/upload-artifact@v4
         with:
           name: arm64-v8a-${{ github.sha }}
           path: app/build/outputs/apk/release/app-arm64-v8a-release.apk
-
-      - name: Upload x86_64
-        uses: actions/upload-artifact@v4
-        with:
-          name: x86_64-${{ github.sha }}
-          path: app/build/outputs/apk/release/app-x86_64-release.apk
 
       - name: Upload ARM32
         uses: actions/upload-artifact@v4
@@ -48,21 +48,20 @@ jobs:
           name: armeabi-v7a-${{ github.sha }}
           path: app/build/outputs/apk/release/app-armeabi-v7a-release.apk
 
-      - name: Upload x86
+      - name: Upload x86_64
         uses: actions/upload-artifact@v4
         with:
-          name: x86-${{ github.sha }}
-          path: app/build/outputs/apk/release/app-x86-release.apk
-
-      - name: Upload Universal
-        uses: actions/upload-artifact@v4
-        with:
-          name: universal-${{ github.sha }}
-          path: app/build/outputs/apk/release/app-universal-release.apk
+          name: x86_64-${{ github.sha }}
+          path: app/build/outputs/apk/release/app-x86_64-release.apk
 
       - name: Upload mapping
         uses: actions/upload-artifact@v4
         with:
           name: mapping-${{ github.sha }}
           path: app/build/outputs/mapping/release/mapping.txt
-          retention-days: 5
+
+      - name: Upload native debug symbols
+        uses: actions/upload-artifact@v4
+        with:
+          name: native-debug-symbols-${{ github.sha }}
+          path: app/build/outputs/native-debug-symbols/release/native-debug-symbols.zip
