--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -31,8 +31,8 @@ jobs:
           mv app/build/outputs/apk/release/app-arm64-v8a-release.apk EhViewer-default-${{ github.ref_name }}-arm64-v8a.apk
           mv app/build/outputs/apk/release/app-armeabi-v7a-release.apk EhViewer-default-${{ github.ref_name }}-armeabi-v7a.apk
           mv app/build/outputs/apk/release/app-x86_64-release.apk EhViewer-default-${{ github.ref_name }}-x86_64.apk
-          mv app/build/outputs/apk/release/app-x86-release.apk EhViewer-default-${{ github.ref_name }}-x86.apk
           mv app/build/outputs/mapping/release/mapping.txt EhViewer-default-${{ github.ref_name }}-mapping.txt
+          mv app/build/outputs/native-debug-symbols/release/native-debug-symbols.zip EhViewer-default-${{ github.ref_name }}-native-debug-symbols.zip
 
       - name: Releases
         uses: softprops/action-gh-release@v2
@@ -43,5 +43,5 @@ jobs:
             EhViewer-default-${{ github.ref_name }}-arm64-v8a.apk
             EhViewer-default-${{ github.ref_name }}-armeabi-v7a.apk
             EhViewer-default-${{ github.ref_name }}-x86_64.apk
-            EhViewer-default-${{ github.ref_name }}-x86.apk
             EhViewer-default-${{ github.ref_name }}-mapping.txt
+            EhViewer-default-${{ github.ref_name }}-native-debug-symbols.zip
