--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8 -XX:+UseParallelGC
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
 org.gradle.caching=true
+org.gradle.configuration-cache=true
 android.useAndroidX=true
 android.enableAppCompileTimeRClass=true
-android.experimental.enableNewResourceShrinker.preciseShrinking=true
-android.lint.useK2Uast=true
+android.r8.integratedResourceShrinking=true
