--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ androidx-collection = "1.5.0"
 androidx-coordinatorlayout = "1.3.0"
 androidx-core = "1.16.0"
 androidx-fragment = "1.8.6"
-androidx-lifecycle = "2.8.7"
+androidx-lifecycle = "2.9.0"
 androidx-paging = "3.3.6"
 androidx-preference = "1.2.1"
 androidx-recyclerview = "1.4.0"
@@ -26,6 +26,7 @@ ksp = "2.1.20-2.0.1"
 ktor-utils = "3.1.3"
 okhttp3 = "5.0.0-alpha.14"
 okio = "3.11.0"
+#noinspection NewerVersionAvailable
 rikkax-material = { strictly = "1.6.6" }
 spotless = "7.0.3"
 
