--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         android:allowBackup="true"
         android:appCategory="image"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="false"
         android:fullBackupContent="@xml/backup_scheme"
         android:hasFragileUserData="true"
         android:icon="@mipmap/ic_launcher"
