--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -61,6 +61,8 @@ ktlint = "com.pinterest.ktlint:ktlint-cli:1.5.0"
 ktor-utils = { module = "io.ktor:ktor-utils", version.ref = "ktor-utils" }
 material = { module = "com.google.android.material:material", version.ref = "google-android-material" }
 
+desugar = "com.android.tools:desugar_jdk_libs:2.1.5"
+
 okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "okhttp3" }
 okhttp-coroutines = { module = "com.squareup.okhttp3:okhttp-coroutines" }
 okio-jvm = { module = "com.squareup.okio:okio-jvm", version.ref = "okio" }
