--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -17,14 +17,19 @@ if (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
 endif (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
 
 option(BUILD_TESTING OFF)
-
-set(XZ_PATCH ${CMAKE_CURRENT_LIST_DIR}/0001-Don-t-build-other-binaries.patch)
+option(XZ_DOC OFF)
+option(XZ_LZIP_DECODER OFF)
+option(XZ_MICROLZMA_DECODER OFF)
+option(XZ_MICROLZMA_ENCODER OFF)
+option(XZ_TOOL_LZMADEC OFF)
+option(XZ_TOOL_LZMAINFO OFF)
+option(XZ_TOOL_XZ OFF)
+option(XZ_TOOL_XZDEC OFF)
 FetchContent_Declare(
         liblzma
         GIT_REPOSITORY https://github.com/tukaani-project/xz.git
-        GIT_TAG v5.6.3
+        GIT_TAG v5.8.1
         GIT_SHALLOW 1
-        PATCH_COMMAND git apply --check -R ${XZ_PATCH} || git apply ${XZ_PATCH}
 )
 
 FetchContent_MakeAvailable(liblzma)
@@ -33,8 +38,8 @@ include_directories(${liblzma_SOURCE_DIR}/src/liblzma/api)
 # Build GNUTLS libnettle
 FetchContent_Declare(
         nettle
-        URL https://ftp.gnu.org/gnu/nettle/nettle-3.9.1.tar.gz
-        URL_MD5 29fcd2dec6bf5b48e5e3ffb3cbc4779e
+        URL https://ftp.gnu.org/gnu/nettle/nettle-3.10.2.tar.gz
+        URL_MD5 b28bcbf6f045ff007940a9401673600d
         SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/nettle/nettle
 )
 
@@ -77,7 +82,7 @@ set(LIBARCHIVE_PATCH
 FetchContent_Declare(
         libarchive
         GIT_REPOSITORY https://github.com/libarchive/libarchive.git
-        GIT_TAG v3.7.7
+        GIT_TAG v3.8.1
         GIT_SHALLOW 1
         PATCH_COMMAND git apply --check -R ${LIBARCHIVE_PATCH} || git apply ${LIBARCHIVE_PATCH}
 )
